force-app/main/default/objects/SOP_Trainee__c/SOP_Trainee__c.object-meta.xml
<CustomObject>
    <description>Names of person who was trained on the SOP.</description>
    <label>SOP Trainee</label>
    <nameField>
        <displayFormat>SOPE-{YYYY}-{MM}-{00000}</displayFormat>
        <label>SOP Trainee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOP Trainees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>