force-app/main/default/objects/SOP_Trainee__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Irrational Raccoon</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SOP Trainees</relationshipLabel>
    <relationshipName>SOP_Trainees</relationshipName>
    <type>Lookup</type>
</CustomField>