force-app/main/default/objects/SOP_Trainee__c/fields/Employee_Trained_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Trained_Date__c</fullName>
    <inlineHelpText>Date which team member was trained in SOP.</inlineHelpText>
    <label>Employee Trained Date</label>
    <type>DateTime</type>
</CustomField>