force-app/main/default/objects/SOP_Trainee__c/fields/SOP_Version_Taken__c.field-meta.xml
<CustomField>
    <fullName>SOP_Version_Taken__c</fullName>
    <inlineHelpText>Version which team member was trained on.</inlineHelpText>
    <label>SOP Version Taken</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>