force-app/main/default/objects/SOP_Trainee__c/fields/Standard_Operation_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Standard_Operation_Procedure__c</fullName>
    <label>Standard Operation Procedure</label>
    <referenceTo>SOP__c</referenceTo>
    <relationshipLabel>SOP Trainees</relationshipLabel>
    <relationshipName>SOP_Trainees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>