force-app/main/default/objects/SOP_Trainee__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SOP Trainees (Trainer Name)</relationshipLabel>
    <relationshipName>SOP_Trainees1</relationshipName>
    <type>Lookup</type>
</CustomField>